--- a/todo
+++ b/todo
@@ -8,3 +8,4 @@ TODO:
     - menus/sliders for vol and internet
     - more bars?
 - kitty/tmux bottom padding?
+- add notifications to bluetooth menu
