--- a/global/kbd/install
+++ b/global/kbd/install
@@ -3,10 +3,10 @@
 curl -s "https://raw.githubusercontent.com/e-cal/dotfiles/main/global/kbd/code-dvorak" > /tmp/code-dvorak
 curl -s "https://github.com/e-cal/dotfiles/blob/main/global/kbd/code-dvorak.map.gz?raw=true" > /tmp/code-dvorak.map.gz
 
-sudo cp /tmp/code-dvorak /usr/share/X11/xkb/symbols/code-dvorak || echo "Failed to copy code-dvorak (X11)" && exit 1
-sudo cp /tmp/code-dvorak.map.gz /usr/share/kbd/keymaps/code-dvorak.map.gz || echo "Failed to copy code-dvorak (system)" && exit 1
+sudo cp /tmp/code-dvorak /usr/share/X11/xkb/symbols/code-dvorak || echo "Failed to copy code-dvorak (X11)" 
+sudo cp /tmp/code-dvorak.map.gz /usr/share/kbd/keymaps/code-dvorak.map.gz || echo "Failed to copy code-dvorak (system)"
 
-setxkbmap code-dvorak || echo "setxkbmap failed" && exit 1
-localectl set-keymap code-dvorak || echo "localectl set-keymap failed" && exit 1
+setxkbmap code-dvorak || echo "setxkbmap failed" 
+localectl set-keymap code-dvorak || echo "localectl set-keymap failed"
 
 echo "Successfully installed code-dvorak. Happy typing!"
