--- a/global/kbd/install
+++ b/global/kbd/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 curl -s "https://raw.githubusercontent.com/e-cal/dotfiles/main/global/kbd/code-dvorak" > /tmp/code-dvorak
-curl -s "https://github.com/e-cal/dotfiles/blob/main/global/kbd/code-dvorak.map.gz?raw=true" > /tmp/code-dvorak.map.gz
+curl -s "https://raw.githubusercontent.com/e-cal/dotfiles/main/global/kbd/code-dvorak.map.gz" > /tmp/code-dvorak.map.gz
 
 sudo cp /tmp/code-dvorak /usr/share/X11/xkb/symbols/code-dvorak || echo "Failed to copy code-dvorak (X11)" 
 sudo cp /tmp/code-dvorak.map.gz /usr/share/kbd/keymaps/code-dvorak.map.gz || echo "Failed to copy code-dvorak (system)"
