--- a/global/scripts/todo
+++ b/global/scripts/todo
@@ -37,7 +37,7 @@ if [[ $1 == "-a" ]]; then
 	exit 0
 fi
 
-if [[ $1 == "-e" ]]; then
+if [[ $1 == "-e" || $1 == "e" ]]; then
 	nvim $TODO_FILE
 fi
 
